# MGSymposiumBot

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose-hub.yml  docker-compose.yml  pyproject.toml  shit.py
MGSymposiumBot/: database.py  db.py  main.py  models.py  shit.py  states.py  utils.py
MGSymposiumBot/interface/: create.py  delete.py  read.py  update.py
alembic/: env.py
alembic/versions/: 42f3b1c974d7_initial_migration.py  e892e0be3afc_initial_migration.py
